# AgentBase

./: .actrc  .cursorrules  .dockerignore  .env.example  .env.local.example  .env.remote.example  .gitignore  .gitmessage  .gitmodules  .mcp.json  AGENTS.md  AUTHENTICATION.md  CLAUDE.md  CONTRIBUTING.md  CONVERT_WEB_TO_SUBMODULE.md  CURSOR_MESSAGES.md  DEPENDENCY_AUDIT_REPORT.md  QUICK_START_PHASE_2A.md  README.md  SHARED_MEMORY_UI_PLAN.md  TESTING_PHASE_2A.md  TESTING_PHASE_2B.md  biome.json  commitlint.config.js  docker-compose.yml  install.sh  package-lock.json  package.json  parse_cc_message_types.py  pnpm-lock.yaml  release.config.js  shared_memory.md  start.sh  tsconfig.json
.claude/: ralph-loop.local.md
.github/workflows/: auto-pr.yml  ci.yml  deploy-web.yml  desktop-release.yml  lint.yml  pr-title.yml  (+1 more)
.husky/: pre-commit
apps/memory-service/: .env.example  API_KEY_FALLBACK.md  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  test_mem0.py
apps/memory-service/src/: __init__.py  api_keys.py  config.py  main.py  memory_processor.py
cli/: install.tsx  start.tsx  start.tsx.backup
docs/: AI_SUMMARY_README.md  AUTH_SETUP.md  CLAUDE_CODE_MESSAGES.md  CURSOR.md  CURSOR_CONVERSATION_ANALYSIS.md  CURSOR_MESSAGES.md
scripts/: analyze_cursor.sh  analyze_cursor_workspaces.py  build-signed.sh  check_all_db_schemas.py  lint-no-silent-returns.sh  seed-test-rules.sql  setup-github-secrets-auto.sh  setup-github-secrets.sh  setup.js  test-release-workflow.sh
supabase/: .env.example  config.toml
web/: .env.example  package-lock.json  package.json
(+712 files in other folders)
